Examples for layer including min rects, min circles, octangle envelopes

--- a/src/main/docs/layer.adoc
+++ b/src/main/docs/layer.adoc
@@ -174,32 +174,332 @@ include::commands/layer_intersection.txt[]
 ==== Minimum Circle
 
 include::commands/layer_mincircle_description.txt[]
+
+include::output/layer_mincircle_6_command.txt[]
+
 include::commands/layer_mincircle.txt[]
+
+include::output/layer_mincircle_0_command.txt[]
+include::output/layer_mincircle_0_result.txt[]
+
+include::output/layer_mincircle_1_command.txt[]
+include::output/layer_mincircle_1_result.txt[]
+
+include::output/layer_mincircle_2_command.txt[]
+include::output/layer_mincircle_2_result.txt[]
+
+include::output/layer_mincircle_3_command.txt[]
+include::output/layer_mincircle_3_result.txt[]
+
+include::output/layer_mincircle_4_command.txt[]
+include::output/layer_mincircle_4_result.txt[]
+
+include::output/layer_mincircle_5_command.txt[]
+include::output/layer_mincircle_5_result.txt[]
+
+include::output/layer_mincircle_6_command.txt[]
+include::output/layer_mincircle_6_result.txt[]
+
+include::output/layer_mincircle_7_command.txt[]
+include::output/layer_mincircle_7_result.txt[]
+
+include::output/layer_mincircle_8_command.txt[]
+include::output/layer_mincircle_8_result.txt[]
+
+include::output/layer_mincircle_9_command.txt[]
+include::output/layer_mincircle_9_result.txt[]
+
+include::output/layer_mincircle_10_command.txt[]
+include::output/layer_mincircle_10_result.txt[]
+
+include::output/layer_mincircle_11_command.txt[]
+include::output/layer_mincircle_11_result.txt[]
+
+include::output/layer_mincircle_12_command.txt[]
+include::output/layer_mincircle_12_result.txt[]
+
+include::output/layer_mincircle_13_command.txt[]
+include::output/layer_mincircle_13_result.txt[]
+
+include::output/layer_mincircle_14_command.txt[]
+include::output/layer_mincircle_14_result.txt[]
+
+image::layer_mincircle.png[]
 
 ==== Minimum Circles
 
 include::commands/layer_mincircles_description.txt[]
+
+include::output/layer_mincircles_6_command.txt[]
+
 include::commands/layer_mincircles.txt[]
+
+include::output/layer_mincircles_0_command.txt[]
+include::output/layer_mincircles_0_result.txt[]
+
+include::output/layer_mincircles_1_command.txt[]
+include::output/layer_mincircles_1_result.txt[]
+
+include::output/layer_mincircles_2_command.txt[]
+include::output/layer_mincircles_2_result.txt[]
+
+include::output/layer_mincircles_3_command.txt[]
+include::output/layer_mincircles_3_result.txt[]
+
+include::output/layer_mincircles_4_command.txt[]
+include::output/layer_mincircles_4_result.txt[]
+
+include::output/layer_mincircles_5_command.txt[]
+include::output/layer_mincircles_5_result.txt[]
+
+include::output/layer_mincircles_6_command.txt[]
+include::output/layer_mincircles_6_result.txt[]
+
+include::output/layer_mincircles_7_command.txt[]
+include::output/layer_mincircles_7_result.txt[]
+
+include::output/layer_mincircles_8_command.txt[]
+include::output/layer_mincircles_8_result.txt[]
+
+include::output/layer_mincircles_9_command.txt[]
+include::output/layer_mincircles_9_result.txt[]
+
+include::output/layer_mincircles_10_command.txt[]
+include::output/layer_mincircles_10_result.txt[]
+
+include::output/layer_mincircles_11_command.txt[]
+include::output/layer_mincircles_11_result.txt[]
+
+include::output/layer_mincircles_12_command.txt[]
+include::output/layer_mincircles_12_result.txt[]
+
+include::output/layer_mincircles_13_command.txt[]
+include::output/layer_mincircles_13_result.txt[]
+
+include::output/layer_mincircles_14_command.txt[]
+include::output/layer_mincircles_14_result.txt[]
+
+image::layer_mincircles.png[]
 
 ==== Minimum Rectangle
 
 include::commands/layer_minrect_description.txt[]
+
+include::output/layer_minrect_6_command.txt[]
+
 include::commands/layer_minrect.txt[]
+
+include::output/layer_minrect_0_command.txt[]
+include::output/layer_minrect_0_result.txt[]
+
+include::output/layer_minrect_1_command.txt[]
+include::output/layer_minrect_1_result.txt[]
+
+include::output/layer_minrect_2_command.txt[]
+include::output/layer_minrect_2_result.txt[]
+
+include::output/layer_minrect_3_command.txt[]
+include::output/layer_minrect_3_result.txt[]
+
+include::output/layer_minrect_4_command.txt[]
+include::output/layer_minrect_4_result.txt[]
+
+include::output/layer_minrect_5_command.txt[]
+include::output/layer_minrect_5_result.txt[]
+
+include::output/layer_minrect_6_command.txt[]
+include::output/layer_minrect_6_result.txt[]
+
+include::output/layer_minrect_7_command.txt[]
+include::output/layer_minrect_7_result.txt[]
+
+include::output/layer_minrect_8_command.txt[]
+include::output/layer_minrect_8_result.txt[]
+
+include::output/layer_minrect_9_command.txt[]
+include::output/layer_minrect_9_result.txt[]
+
+include::output/layer_minrect_10_command.txt[]
+include::output/layer_minrect_10_result.txt[]
+
+include::output/layer_minrect_11_command.txt[]
+include::output/layer_minrect_11_result.txt[]
+
+include::output/layer_minrect_12_command.txt[]
+include::output/layer_minrect_12_result.txt[]
+
+include::output/layer_minrect_13_command.txt[]
+include::output/layer_minrect_13_result.txt[]
+
+include::output/layer_minrect_14_command.txt[]
+include::output/layer_minrect_14_result.txt[]
+
+image::layer_minrect.png[]
 
 ==== Minimum Rectangles
 
 include::commands/layer_minrects_description.txt[]
+
+include::output/layer_minrects_6_command.txt[]
+
 include::commands/layer_minrects.txt[]
+
+include::output/layer_minrects_0_command.txt[]
+include::output/layer_minrects_0_result.txt[]
+
+include::output/layer_minrects_1_command.txt[]
+include::output/layer_minrects_1_result.txt[]
+
+include::output/layer_minrects_2_command.txt[]
+include::output/layer_minrects_2_result.txt[]
+
+include::output/layer_minrects_3_command.txt[]
+include::output/layer_minrects_3_result.txt[]
+
+include::output/layer_minrects_4_command.txt[]
+include::output/layer_minrects_4_result.txt[]
+
+include::output/layer_minrects_5_command.txt[]
+include::output/layer_minrects_5_result.txt[]
+
+include::output/layer_minrects_6_command.txt[]
+include::output/layer_minrects_6_result.txt[]
+
+include::output/layer_minrects_7_command.txt[]
+include::output/layer_minrects_7_result.txt[]
+
+include::output/layer_minrects_8_command.txt[]
+include::output/layer_minrects_8_result.txt[]
+
+include::output/layer_minrects_9_command.txt[]
+include::output/layer_minrects_9_result.txt[]
+
+include::output/layer_minrects_10_command.txt[]
+include::output/layer_minrects_10_result.txt[]
+
+include::output/layer_minrects_11_command.txt[]
+include::output/layer_minrects_11_result.txt[]
+
+include::output/layer_minrects_12_command.txt[]
+include::output/layer_minrects_12_result.txt[]
+
+include::output/layer_minrects_13_command.txt[]
+include::output/layer_minrects_13_result.txt[]
+
+include::output/layer_minrects_14_command.txt[]
+include::output/layer_minrects_14_result.txt[]
+
+image::layer_minrects.png[]
 
 ==== Octangle Envelope
 
 include::commands/layer_octagonalenvelope_description.txt[]
+
+include::output/layer_octagonalenvelope_6_command.txt[]
+
 include::commands/layer_octagonalenvelope.txt[]
+
+include::output/layer_octagonalenvelope_0_command.txt[]
+include::output/layer_octagonalenvelope_0_result.txt[]
+
+include::output/layer_octagonalenvelope_1_command.txt[]
+include::output/layer_octagonalenvelope_1_result.txt[]
+
+include::output/layer_octagonalenvelope_2_command.txt[]
+include::output/layer_octagonalenvelope_2_result.txt[]
+
+include::output/layer_octagonalenvelope_3_command.txt[]
+include::output/layer_octagonalenvelope_3_result.txt[]
+
+include::output/layer_octagonalenvelope_4_command.txt[]
+include::output/layer_octagonalenvelope_4_result.txt[]
+
+include::output/layer_octagonalenvelope_5_command.txt[]
+include::output/layer_octagonalenvelope_5_result.txt[]
+
+include::output/layer_octagonalenvelope_6_command.txt[]
+include::output/layer_octagonalenvelope_6_result.txt[]
+
+include::output/layer_octagonalenvelope_7_command.txt[]
+include::output/layer_octagonalenvelope_7_result.txt[]
+
+include::output/layer_octagonalenvelope_8_command.txt[]
+include::output/layer_octagonalenvelope_8_result.txt[]
+
+include::output/layer_octagonalenvelope_9_command.txt[]
+include::output/layer_octagonalenvelope_9_result.txt[]
+
+include::output/layer_octagonalenvelope_10_command.txt[]
+include::output/layer_octagonalenvelope_10_result.txt[]
+
+include::output/layer_octagonalenvelope_11_command.txt[]
+include::output/layer_octagonalenvelope_11_result.txt[]
+
+include::output/layer_octagonalenvelope_12_command.txt[]
+include::output/layer_octagonalenvelope_12_result.txt[]
+
+include::output/layer_octagonalenvelope_13_command.txt[]
+include::output/layer_octagonalenvelope_13_result.txt[]
+
+include::output/layer_octagonalenvelope_14_command.txt[]
+include::output/layer_octagonalenvelope_14_result.txt[]
+
+image::layer_octagonalenvelope.png[]
 
 ==== Octangle Envelopes
 
 include::commands/layer_octagonalenvelopes_description.txt[]
+
+include::output/layer_octagonalenvelopes_6_command.txt[]
+
 include::commands/layer_octagonalenvelopes.txt[]
+
+include::output/layer_octagonalenvelopes_0_command.txt[]
+include::output/layer_octagonalenvelopes_0_result.txt[]
+
+include::output/layer_octagonalenvelopes_1_command.txt[]
+include::output/layer_octagonalenvelopes_1_result.txt[]
+
+include::output/layer_octagonalenvelopes_2_command.txt[]
+include::output/layer_octagonalenvelopes_2_result.txt[]
+
+include::output/layer_octagonalenvelopes_3_command.txt[]
+include::output/layer_octagonalenvelopes_3_result.txt[]
+
+include::output/layer_octagonalenvelopes_4_command.txt[]
+include::output/layer_octagonalenvelopes_4_result.txt[]
+
+include::output/layer_octagonalenvelopes_5_command.txt[]
+include::output/layer_octagonalenvelopes_5_result.txt[]
+
+include::output/layer_octagonalenvelopes_6_command.txt[]
+include::output/layer_octagonalenvelopes_6_result.txt[]
+
+include::output/layer_octagonalenvelopes_7_command.txt[]
+include::output/layer_octagonalenvelopes_7_result.txt[]
+
+include::output/layer_octagonalenvelopes_8_command.txt[]
+include::output/layer_octagonalenvelopes_8_result.txt[]
+
+include::output/layer_octagonalenvelopes_9_command.txt[]
+include::output/layer_octagonalenvelopes_9_result.txt[]
+
+include::output/layer_octagonalenvelopes_10_command.txt[]
+include::output/layer_octagonalenvelopes_10_result.txt[]
+
+include::output/layer_octagonalenvelopes_11_command.txt[]
+include::output/layer_octagonalenvelopes_11_result.txt[]
+
+include::output/layer_octagonalenvelopes_12_command.txt[]
+include::output/layer_octagonalenvelopes_12_result.txt[]
+
+include::output/layer_octagonalenvelopes_13_command.txt[]
+include::output/layer_octagonalenvelopes_13_result.txt[]
+
+include::output/layer_octagonalenvelopes_14_command.txt[]
+include::output/layer_octagonalenvelopes_14_result.txt[]
+
+image::layer_octagonalenvelopes.png[]
 
 ==== Points Along Lines
 
