Add convex hull examples

--- a/src/main/docs/layer.adoc
+++ b/src/main/docs/layer.adoc
@@ -119,12 +119,112 @@ include::commands/layer_clip.txt[]
 ==== Convex Hull
 
 include::commands/layer_convexhull_description.txt[]
+
+include::output/layer_convexhull_6_command.txt[]
+
 include::commands/layer_convexhull.txt[]
+
+include::output/layer_convexhull_0_command.txt[]
+include::output/layer_convexhull_0_result.txt[]
+
+include::output/layer_convexhull_1_command.txt[]
+include::output/layer_convexhull_1_result.txt[]
+
+include::output/layer_convexhull_2_command.txt[]
+include::output/layer_convexhull_2_result.txt[]
+
+include::output/layer_convexhull_3_command.txt[]
+include::output/layer_convexhull_3_result.txt[]
+
+include::output/layer_convexhull_4_command.txt[]
+include::output/layer_convexhull_4_result.txt[]
+
+include::output/layer_convexhull_5_command.txt[]
+include::output/layer_convexhull_5_result.txt[]
+
+include::output/layer_convexhull_6_command.txt[]
+include::output/layer_convexhull_6_result.txt[]
+
+include::output/layer_convexhull_7_command.txt[]
+include::output/layer_convexhull_7_result.txt[]
+
+include::output/layer_convexhull_8_command.txt[]
+include::output/layer_convexhull_8_result.txt[]
+
+include::output/layer_convexhull_9_command.txt[]
+include::output/layer_convexhull_9_result.txt[]
+
+include::output/layer_convexhull_10_command.txt[]
+include::output/layer_convexhull_10_result.txt[]
+
+include::output/layer_convexhull_11_command.txt[]
+include::output/layer_convexhull_11_result.txt[]
+
+include::output/layer_convexhull_12_command.txt[]
+include::output/layer_convexhull_12_result.txt[]
+
+include::output/layer_convexhull_13_command.txt[]
+include::output/layer_convexhull_13_result.txt[]
+
+include::output/layer_convexhull_14_command.txt[]
+include::output/layer_convexhull_14_result.txt[]
+
+image::layer_convexhull.png[]
 
 ==== Convex Hulls
 
 include::commands/layer_convexhulls_description.txt[]
+
+include::output/layer_convexhulls_6_command.txt[]
+
 include::commands/layer_convexhulls.txt[]
+
+include::output/layer_convexhulls_0_command.txt[]
+include::output/layer_convexhulls_0_result.txt[]
+
+include::output/layer_convexhulls_1_command.txt[]
+include::output/layer_convexhulls_1_result.txt[]
+
+include::output/layer_convexhulls_2_command.txt[]
+include::output/layer_convexhulls_2_result.txt[]
+
+include::output/layer_convexhulls_3_command.txt[]
+include::output/layer_convexhulls_3_result.txt[]
+
+include::output/layer_convexhulls_4_command.txt[]
+include::output/layer_convexhulls_4_result.txt[]
+
+include::output/layer_convexhulls_5_command.txt[]
+include::output/layer_convexhulls_5_result.txt[]
+
+include::output/layer_convexhulls_6_command.txt[]
+include::output/layer_convexhulls_6_result.txt[]
+
+include::output/layer_convexhulls_7_command.txt[]
+include::output/layer_convexhulls_7_result.txt[]
+
+include::output/layer_convexhulls_8_command.txt[]
+include::output/layer_convexhulls_8_result.txt[]
+
+include::output/layer_convexhulls_9_command.txt[]
+include::output/layer_convexhulls_9_result.txt[]
+
+include::output/layer_convexhulls_10_command.txt[]
+include::output/layer_convexhulls_10_result.txt[]
+
+include::output/layer_convexhulls_11_command.txt[]
+include::output/layer_convexhulls_11_result.txt[]
+
+include::output/layer_convexhulls_12_command.txt[]
+include::output/layer_convexhulls_12_result.txt[]
+
+include::output/layer_convexhulls_13_command.txt[]
+include::output/layer_convexhulls_13_result.txt[]
+
+include::output/layer_convexhulls_14_command.txt[]
+include::output/layer_convexhulls_14_result.txt[]
+
+image::layer_convexhulls.png[]
 
 ==== Coordinates
 
