--- a/src/main/docs/tile.adoc
+++ b/src/main/docs/tile.adoc
@@ -88,4 +88,57 @@ include::commands/tile_tiles.txt[]
 === Vector Grid
 
 include::commands/tile_vector_grid_description.txt[]
+
+include::output/tile_vector_grid_2_command.txt[]
+
 include::commands/tile_vector_grid.txt[]
+
+include::output/tile_vector_grid_0_command.txt[]
+include::output/tile_vector_grid_0_result.txt[]
+
+include::output/tile_vector_grid_1_command.txt[]
+include::output/tile_vector_grid_1_result.txt[]
+
+include::output/tile_vector_grid_2_command.txt[]
+include::output/tile_vector_grid_2_result.txt[]
+
+include::output/tile_vector_grid_3_command.txt[]
+include::output/tile_vector_grid_3_result.txt[]
+
+include::output/tile_vector_grid_4_command.txt[]
+include::output/tile_vector_grid_4_result.txt[]
+
+include::output/tile_vector_grid_5_command.txt[]
+include::output/tile_vector_grid_5_result.txt[]
+
+include::output/tile_vector_grid_6_command.txt[]
+include::output/tile_vector_grid_6_result.txt[]
+
+include::output/tile_vector_grid_7_command.txt[]
+include::output/tile_vector_grid_7_result.txt[]
+
+include::output/tile_vector_grid_8_command.txt[]
+include::output/tile_vector_grid_8_result.txt[]
+
+include::output/tile_vector_grid_9_command.txt[]
+include::output/tile_vector_grid_9_result.txt[]
+
+include::output/tile_vector_grid_10_command.txt[]
+include::output/tile_vector_grid_10_result.txt[]
+
+include::output/tile_vector_grid_11_command.txt[]
+include::output/tile_vector_grid_11_result.txt[]
+
+include::output/tile_vector_grid_12_command.txt[]
+include::output/tile_vector_grid_12_result.txt[]
+
+include::output/tile_vector_grid_13_command.txt[]
+include::output/tile_vector_grid_13_result.txt[]
+
+include::output/tile_vector_grid_14_command.txt[]
+include::output/tile_vector_grid_14_result.txt[]
+
+include::output/tile_vector_grid_15_command.txt[]
+include::output/tile_vector_grid_15_result.txt[]
+
+image::tile_vector_grid.png[]
