--- a/src/main/docs/map.adoc
+++ b/src/main/docs/map.adoc
@@ -56,12 +56,85 @@ include::output/map_list_4_result.txt[]
 === Add Layer
 
 include::commands/map_add_layer_description.txt[]
+
+include::output/map_add_layer_7_command.txt[]
+
 include::commands/map_add_layer.txt[]
+
+include::output/map_add_layer_0_command.txt[]
+include::output/map_add_layer_0_result.txt[]
+
+include::output/map_add_layer_1_command.txt[]
+include::output/map_add_layer_1_result.txt[]
+
+include::output/map_add_layer_2_command.txt[]
+include::output/map_add_layer_2_result.txt[]
+
+include::output/map_add_layer_3_command.txt[]
+include::output/map_add_layer_3_result.txt[]
+
+include::output/map_add_layer_4_command.txt[]
+include::output/map_add_layer_4_result.txt[]
+
+include::output/map_add_layer_5_command.txt[]
+include::output/map_add_layer_5_result.txt[]
+
+include::output/map_add_layer_6_command.txt[]
+include::output/map_add_layer_6_result.txt[]
+
+include::output/map_add_layer_7_command.txt[]
+include::output/map_add_layer_7_result.txt[]
+
+include::output/map_add_layer_8_command.txt[]
+include::output/map_add_layer_8_result.txt[]
+
+include::output/map_add_layer_9_command.txt[]
+include::output/map_add_layer_9_result.txt[]
+
+image::map_add_layer.png[]
 
 === Add Raster
 
 include::commands/map_add_raster_description.txt[]
+
+include::output/map_add_raster_3_command.txt[]
+
 include::commands/map_add_raster.txt[]
+
+include::output/map_add_raster_0_command.txt[]
+include::output/map_add_raster_0_result.txt[]
+
+include::output/map_add_raster_1_command.txt[]
+include::output/map_add_raster_1_result.txt[]
+
+include::output/map_add_raster_2_command.txt[]
+include::output/map_add_raster_2_result.txt[]
+
+include::output/map_add_raster_3_command.txt[]
+include::output/map_add_raster_3_result.txt[]
+
+include::output/map_add_raster_4_command.txt[]
+include::output/map_add_raster_4_result.txt[]
+
+include::output/map_add_raster_5_command.txt[]
+include::output/map_add_raster_5_result.txt[]
+
+include::output/map_add_raster_6_command.txt[]
+include::output/map_add_raster_6_result.txt[]
+
+include::output/map_add_raster_7_command.txt[]
+include::output/map_add_raster_7_result.txt[]
+
+include::output/map_add_raster_8_command.txt[]
+include::output/map_add_raster_8_result.txt[]
+
+include::output/map_add_raster_9_command.txt[]
+include::output/map_add_raster_9_result.txt[]
+
+include::output/map_add_raster_10_command.txt[]
+include::output/map_add_raster_10_result.txt[]
+
+image::map_add_raster.png[]
 
 === Add Tle
 
