Add more map examples to docs.

--- a/src/main/docs/map.adoc
+++ b/src/main/docs/map.adoc
@@ -136,28 +136,217 @@ include::output/map_add_raster_10_result.txt[]
 
 image::map_add_raster.png[]
 
-=== Add Tle
+=== Add Tile Layer
 
 include::commands/map_add_tile_description.txt[]
+
+include::output/map_add_tile_2_command.txt[]
+
 include::commands/map_add_tile.txt[]
+
+include::output/map_add_tile_0_command.txt[]
+include::output/map_add_tile_0_result.txt[]
+
+include::output/map_add_tile_1_command.txt[]
+include::output/map_add_tile_1_result.txt[]
+
+include::output/map_add_tile_2_command.txt[]
+include::output/map_add_tile_2_result.txt[]
+
+include::output/map_add_tile_3_command.txt[]
+include::output/map_add_tile_3_result.txt[]
+
+include::output/map_add_tile_4_command.txt[]
+include::output/map_add_tile_4_result.txt[]
+
+include::output/map_add_tile_5_command.txt[]
+include::output/map_add_tile_5_result.txt[]
+
+include::output/map_add_tile_6_command.txt[]
+include::output/map_add_tile_6_result.txt[]
+
+include::output/map_add_tile_7_command.txt[]
+include::output/map_add_tile_7_result.txt[]
+
+include::output/map_add_tile_8_command.txt[]
+include::output/map_add_tile_8_result.txt[]
+
+include::output/map_add_tile_9_command.txt[]
+include::output/map_add_tile_9_result.txt[]
+
+image::map_add_tile.png[]
 
 === Remove Layer
 
 include::commands/map_remove_layer_description.txt[]
+
+include::output/map_remove_layer_10_command.txt[]
+
 include::commands/map_remove_layer.txt[]
+
+include::output/map_remove_layer_0_command.txt[]
+include::output/map_remove_layer_0_result.txt[]
+
+include::output/map_remove_layer_1_command.txt[]
+include::output/map_remove_layer_1_result.txt[]
+
+include::output/map_remove_layer_2_command.txt[]
+include::output/map_remove_layer_2_result.txt[]
+
+include::output/map_remove_layer_3_command.txt[]
+include::output/map_remove_layer_3_result.txt[]
+
+include::output/map_remove_layer_4_command.txt[]
+include::output/map_remove_layer_4_result.txt[]
+
+include::output/map_remove_layer_5_command.txt[]
+include::output/map_remove_layer_5_result.txt[]
+
+include::output/map_remove_layer_6_command.txt[]
+include::output/map_remove_layer_6_result.txt[]
+
+include::output/map_remove_layer_7_command.txt[]
+include::output/map_remove_layer_7_result.txt[]
+
+include::output/map_remove_layer_8_command.txt[]
+include::output/map_remove_layer_8_result.txt[]
+
+include::output/map_remove_layer_9_command.txt[]
+include::output/map_remove_layer_9_result.txt[]
+
+include::output/map_remove_layer_10_command.txt[]
+include::output/map_remove_layer_10_result.txt[]
+
+include::output/map_remove_layer_11_command.txt[]
+include::output/map_remove_layer_11_result.txt[]
+
+include::output/map_remove_layer_12_command.txt[]
+include::output/map_remove_layer_12_result.txt[]
 
 === Reorder
 
 include::commands/map_reorder_description.txt[]
 include::commands/map_reorder.txt[]
 
+include::output/map_reorder_0_command.txt[]
+include::output/map_reorder_0_result.txt[]
+
+include::output/map_reorder_1_command.txt[]
+include::output/map_reorder_1_result.txt[]
+
+include::output/map_reorder_2_command.txt[]
+include::output/map_reorder_2_result.txt[]
+
+include::output/map_reorder_3_command.txt[]
+include::output/map_reorder_3_result.txt[]
+
+include::output/map_reorder_4_command.txt[]
+include::output/map_reorder_4_result.txt[]
+
+include::output/map_reorder_5_command.txt[]
+include::output/map_reorder_5_result.txt[]
+
+include::output/map_reorder_6_command.txt[]
+include::output/map_reorder_6_result.txt[]
+
+include::output/map_reorder_7_command.txt[]
+include::output/map_reorder_7_result.txt[]
+
+include::output/map_reorder_8_command.txt[]
+include::output/map_reorder_8_result.txt[]
+
+include::output/map_reorder_9_command.txt[]
+include::output/map_reorder_9_result.txt[]
+
+include::output/map_reorder_10_command.txt[]
+include::output/map_reorder_10_result.txt[]
+
+include::output/map_reorder_11_command.txt[]
+include::output/map_reorder_11_result.txt[]
+
+include::output/map_reorder_12_command.txt[]
+include::output/map_reorder_12_result.txt[]
+
+include::output/map_reorder_13_command.txt[]
+include::output/map_reorder_13_result.txt[]
+
+image::map_reorder.png[]
+
 === Layers
 
 include::commands/map_layers_description.txt[]
+
+include::output/map_layers_9_command.txt[]
+
 include::commands/map_layers.txt[]
+
+include::output/map_layers_0_command.txt[]
+include::output/map_layers_0_result.txt[]
+
+include::output/map_layers_1_command.txt[]
+include::output/map_layers_1_result.txt[]
+
+include::output/map_layers_2_command.txt[]
+include::output/map_layers_2_result.txt[]
+
+include::output/map_layers_3_command.txt[]
+include::output/map_layers_3_result.txt[]
+
+include::output/map_layers_4_command.txt[]
+include::output/map_layers_4_result.txt[]
+
+include::output/map_layers_5_command.txt[]
+include::output/map_layers_5_result.txt[]
+
+include::output/map_layers_6_command.txt[]
+include::output/map_layers_6_result.txt[]
+
+include::output/map_layers_7_command.txt[]
+include::output/map_layers_7_result.txt[]
+
+include::output/map_layers_8_command.txt[]
+include::output/map_layers_8_result.txt[]
+
+include::output/map_layers_9_command.txt[]
+include::output/map_layers_9_result.txt[]
+
+include::output/map_layers_10_command.txt[]
+include::output/map_layers_10_result.txt[]
 
 === Draw
 
 include::commands/map_draw_description.txt[]
+
+include::output/map_draw_8_command.txt[]
+
 include::commands/map_draw.txt[]
 
+include::output/map_draw_0_command.txt[]
+include::output/map_draw_0_result.txt[]
+
+include::output/map_draw_1_command.txt[]
+include::output/map_draw_1_result.txt[]
+
+include::output/map_draw_2_command.txt[]
+include::output/map_draw_2_result.txt[]
+
+include::output/map_draw_3_command.txt[]
+include::output/map_draw_3_result.txt[]
+
+include::output/map_draw_4_command.txt[]
+include::output/map_draw_4_result.txt[]
+
+include::output/map_draw_5_command.txt[]
+include::output/map_draw_5_result.txt[]
+
+include::output/map_draw_6_command.txt[]
+include::output/map_draw_6_result.txt[]
+
+include::output/map_draw_7_command.txt[]
+include::output/map_draw_7_result.txt[]
+
+include::output/map_draw_8_command.txt[]
+include::output/map_draw_8_result.txt[]
+
+include::output/map_draw_9_command.txt[]
+include::output/map_draw_9_result.txt[]
